--- a/agroia.html
+++ b/agroia.html
@@ -39,9 +39,13 @@
       </div>
     </main>
     <footer>
-      <p>Contact : <a href="mailto:contact@agriguard.sn">contact@agroia.sn</a></p>
-      <p>*123# • WhatsApp +221 70 760 10 58</p>
-    </footer>
+    
+    <footer>
+      <p><a href="index.html"> Voir le site complet</a></p>
+  <p>Contact : <a href="mailto:contact@agroia.sn">contact@agroia.sn</a></p>
+  <p>*123# • WhatsApp +221 70 760 10 58</p>
+</footer>
+
   </section>
 </body>
 </html>
