--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <header class="container header">
     <nav class="nav">
       <a class="logo" href="#">AgroIA</a>
-      <input id="nav-toggle" type="checkbox" aria-label="Ouvrir le menu" />
-      <label for="nav-toggle" class="burger" aria-hidden="true">☰</label>
+ 
       <ul class="menu">
         <li><a href="#probleme">Problème</a></li>
         <li><a href="#solution">Solution IA</a></li>
         <li><a href="#impact">Impact</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="agroia.html">Poster</a></li>
       </ul>
     </nav>
     <section class="hero">
