--- a/agroia.html
+++ b/agroia.html
@@ -14,14 +14,14 @@
     </header>
     <main>
       <div class="bloc">
-        <h3>🌾 Problème</h3>
+        <h3>Problème</h3>
         <ul>
           <li>Maladies et ravageurs → pertes élevées</li>
           <li>Accès limité au conseil agronomique</li>
         </ul>
       </div>
       <div class="bloc">
-        <h3>🤖 Solution IA</h3>
+        <h3>Solution IA</h3>
         <ul>
           <li>Diagnostic simple (photo ou SMS)</li>
           <li>Score de risque quotidien</li>
@@ -30,11 +30,11 @@
         </ul>
       </div>
       <div class="bloc">
-        <h3>📈 Impact</h3>
+        <h3>Impact</h3>
         <ul>
-          <li>+15–25% rendement</li>
-          <li>−20–30% pertes</li>
-          <li>−10–20% eau utilisée</li>
+          <li>plus de 15 et moins 25% rendement</li>
+          <li>moins 20 et 30% pertes</li>
+          <li>moins 10 et 20% d'eau utilisée</li>
         </ul>
       </div>
     </main>
@@ -42,8 +42,8 @@
     
     <footer>
       <p><a href="index.html"> Voir le site complet</a></p>
-  <p>Contact : <a href="mailto:contact@agroia.sn">contact@agroia.sn</a></p>
-  <p>*123# • WhatsApp +221 70 760 10 58</p>
+  <p>Contact : <a href="mailto:contact@agroia.sn">agroia@gmail.com</a></p>
+  <p>WhatsApp +221 70 760 10 58</p>
 </footer>
 
   </section>
