--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#solution">Solution IA</a></li>
         <li><a href="#impact">Impact</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="agroia.html">Poster</a></li>
+        <li><a href="agroia.html">IA</a></li>
       </ul>
     </nav>
     <section class="hero">
