--- a/agroia.html
+++ b/agroia.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <title>Poster AgroIA</title>
   <link rel="stylesheet" href="agroia.css">
+
 </head>
 <body>
   <section class="poster">
     <header>
+      <img src="images/champs.jpg" alt="Champs de culture">
       <h1>AgroIA</h1>
       <h2>Assistant IA pour des récoltes plus sûres</h2>
-      <p class="slogan">Plus de Récolte • Moins de Pertes • Accessible en 2G</p>
+      <p class="slogan">Plus de Récolte , Moins de Pertes , Accessible en 2G</p>
     </header>
     <main>
       <div class="bloc">
@@ -19,33 +21,33 @@
           <li>Maladies et ravageurs → pertes élevées</li>
           <li>Accès limité au conseil agronomique</li>
         </ul>
+        <img src="images/feuilles malades.jpg" alt="Feuille malade">
       </div>
       <div class="bloc">
-        <h3>Solution IA</h3>
+        <h3> Solution IA</h3>
         <ul>
           <li>Diagnostic simple (photo ou SMS)</li>
           <li>Score de risque quotidien</li>
           <li>Recommandations multilingues</li>
           <li>Accès : USSD, WhatsApp, Web léger</li>
         </ul>
+        <img src="images/smartphone-325484_1280.jpg" alt="Smartphone agriculteur">
       </div>
       <div class="bloc">
         <h3>Impact</h3>
         <ul>
-          <li>plus de 15 et moins 25% rendement</li>
-          <li>moins 20 et 30% pertes</li>
-          <li>moins 10 et 20% d'eau utilisée</li>
+          <li>+15 à 25% de rendement</li>
+          <li>-20 à 30% de pertes</li>
+          <li>-10 à 20% d'eau utilisée</li>
         </ul>
+        <img src="images/graphique de rendement.jpg" alt="Graphique rendement">
       </div>
     </main>
     <footer>
-    
-    <footer>
-      <p><a href="index.html"> Voir le site complet</a></p>
-  <p>Contact : <a href="mailto:contact@agroia.sn">agroia@gmail.com</a></p>
-  <p>WhatsApp +221 70 760 10 58</p>
-</footer>
-
+      <p><a href="index.html">Voir le site complet</a></p>
+      <p>Contact : <a href="mailto:contact@agroia.sn">agroia@gmail.com</a></p>
+      <p>WhatsApp +221 70 760 10 58</p>
+    </footer>
   </section>
 </body>
 </html>
