--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
   </main>
 
   <footer class="footer">
+    <a href="#top" class="back-to-top"><i class="fas fa-arrow-up"></i> Haut de page</a>
     <div class="container">
       <p><i class="fas fa-leaf"></i> © 2025 AgroIA • Inclusif, local, data-driven.</p>
+       
     </div>
   </footer>
 </body>
