--- a/agroia.html
+++ b/agroia.html
@@ -8,23 +8,37 @@
 </head>
 <body>
   <section class="poster">
+
+    <!-- Barre de navigation -->
+    <nav>
+      <a href="#" class="logo">AgroIA</a>
+      <ul>
+        <li><a href="#probleme">Problème</a></li>
+        <li><a href="#solution">Solution IA</a></li>
+        <li><a href="#impact">Impact</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Site Complet</a></li>
+      </ul>
+    </nav>
+
     <header>
       <img src="images/champs.jpg" alt="Champs de culture">
       <h1>AgroIA</h1>
       <h2>Assistant IA pour des récoltes plus sûres</h2>
       <p class="slogan">Plus de Récolte , Moins de Pertes , Accessible en 2G</p>
     </header>
+
     <main>
-      <div class="bloc">
-        <h3>Problème</h3>
+      <div class="bloc" id="probleme">
+        <h3> Problème</h3>
         <ul>
           <li>Maladies et ravageurs → pertes élevées</li>
           <li>Accès limité au conseil agronomique</li>
         </ul>
         <img src="images/feuilles malades.jpg" alt="Feuille malade">
       </div>
-      <div class="bloc">
-        <h3> Solution IA</h3>
+      <div class="bloc" id="solution">
+        <h3>Solution IA</h3>
         <ul>
           <li>Diagnostic simple (photo ou SMS)</li>
           <li>Score de risque quotidien</li>
@@ -33,8 +47,8 @@
         </ul>
         <img src="images/smartphone-325484_1280.jpg" alt="Smartphone agriculteur">
       </div>
-      <div class="bloc">
-        <h3>Impact</h3>
+      <div class="bloc" id="impact">
+        <h3> Impact</h3>
         <ul>
           <li>+15 à 25% de rendement</li>
           <li>-20 à 30% de pertes</li>
@@ -43,7 +57,8 @@
         <img src="images/graphique de rendement.jpg" alt="Graphique rendement">
       </div>
     </main>
-    <footer>
+
+    <footer id="contact">
       <p><a href="index.html">Voir le site complet</a></p>
       <p>Contact : <a href="mailto:contact@agroia.sn">agroia@gmail.com</a></p>
       <p>WhatsApp +221 70 760 10 58</p>
