--- a/agroia.html
+++ b/agroia.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <title>Poster AgroIA</title>
   <link rel="stylesheet" href="agroia.css">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <section class="poster">
 
     <!-- Barre de navigation -->
-    <nav>
-      <a href="#" class="logo">AgroIA</a>
-      <ul>
-        <li><a href="#probleme">Problème</a></li>
-        <li><a href="#solution">Solution IA</a></li>
-        <li><a href="#impact">Impact</a></li>
-        <li><a href="#contact">Contact</a></li>
+  <header> 
+      <nav class="nav">
+      <a class="logo" href="#"><i class="fas fa-leaf"></i> AgroIA</a>
+      <ul class="menu">
+        <li><a href="#probleme"><i class="fas fa-exclamation-triangle"></i> Problème</a></li>
+        <li><a href="#solution"><i class="fas fa-robot"></i> Solution IA</a></li>
+        <li><a href="#impact"><i class="fas fa-chart-line"></i> Impact</a></li>
+        <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
         <li><a href="index.html">Site Complet</a></li>
       </ul>
     </nav>
 
-    <header>
-      <img src="images/champs.jpg" alt="Champs de culture">
-      <h1>AgroIA</h1>
+            <h1>AgroIA</h1>
       <h2>Assistant IA pour des récoltes plus sûres</h2>
       <p class="slogan">Plus de Récolte , Moins de Pertes , Accessible en 2G</p>
-    </header>
+      <img src="images/champs.jpg" alt="Champs de culture">
+  </header>
 
     <main>
       <div class="bloc" id="probleme">
