--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h1><i class="fas fa-seedling"></i> Assistant IA pour des récoltes plus sûres</h1>
       <p>Alertes précoces, recommandations d’irrigation et diagnostics simples – accessibles même en 2G.</p>
       <a class="btn" href="#demo"><i class="fas fa-play"></i> Voir la démo</a>
-      <img src="images/champs.jpg" alt="Champs cultivés" class="img-section">
+      <img src="images/Champs cultivés.jpg" alt="Champs cultivés" class="img-section">
     </section>
   </header>
 
@@ -92,7 +92,7 @@
           <li><i class="fas fa-shield-virus"></i> <strong>−20–30%</strong> pertes maladies/ravageurs</li>
           <li><i class="fas fa-water"></i> <strong>−10–20%</strong> eau d’irrigation</li>
         </ul>
-        <img src="images/graphique de rendement.jpg" alt="Graphique agriculture" class="img-section">
+        <img src="images/graphique rendement agricole.jpg" alt="Graphique agriculture" class="img-section">
       </div>
       <div class="card">
         <h3><i class="fas fa-users"></i> Pilote</h3>
