--- a/index.html
+++ b/index.html
@@ -30,18 +30,20 @@
       </ul>
     </nav>
 
-    <section class="hero">
-      <h1><i class="fas fa-seedling"></i> Assistant IA pour des récoltes plus sûres</h1>
-      <p>Alertes précoces, recommandations d’irrigation et diagnostics simples – accessibles même en 2G.</p>
-      <a class="btn" href="#demo"><i class="fas fa-play"></i> Voir la démo</a>
-      <img src="images/Champs cultivés.jpg" alt="Champs cultivés" class="img-section">
-    </section>
+   <section id="demo" class="strip">
+  <div class="container">
+    <h2><i class="fas fa-laptop-code"></i> Démo (concept)</h2>
+    <p>Testez dès maintenant notre prototype IA :</p>
+    <a class="btn" href="diagnose.php"><i class="fas fa-microscope"></i> Tester AgroIA</a>
+  </div>
+</section>
+
   </header>
 
   <main>
     <!-- Problème -->
     <section id="probleme" class="container grid two">
-      <div>
+      <div
         <h2><i class="fas fa-bug"></i> Le problème</h2>
         <ul class="list">
           <li><i class="fas fa-virus"></i> Maladies & ravageurs → pertes importantes</li>
