--- a/agroia.html
+++ b/agroia.html
@@ -29,7 +29,9 @@
       </nav>
 
       <h1>AgroIA</h1>
+      <marquee>
       <h2>Assistant IA pour des récoltes plus sûres</h2>
+      </marquee>
       <p class="slogan">Plus de Récolte , Moins de Pertes , Accessible en 2G</p>
       <img src="images/champs.jpg" alt="Champs de culture">
     </header>
