--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
    <section id="demo" class="strip">
   <div class="container">
     <h2><i class="fas fa-laptop-code"></i> Démo (concept)</h2>
+    <marquee>
     <p>Testez dès maintenant notre prototype IA :</p>
+    </marquee>
     <a class="btn" href="diagnose.php"><i class="fas fa-microscope"></i> Tester AgroIA</a>
   </div>
 </section>
